# csv-ledger

./: .gitignore  Cargo.toml  README.md  coverage.sh
coverage/html/: index.html
coverage/html/coverage/Users/oliverbrotchie/Documents/GitHub/csv-ledger/src/: ledger.rs.html  main.rs.html  parse.rs.html
lib/: Cargo.toml  README.md
lib/src/: ledger.rs  lib.rs  parse.rs
src/: bank.rs  ledger.rs  main.rs  parse.rs
