[package]
name = "csv-ledger"
authors = ["Oliver Brotchie <o.brotchie@gmail.com>"]
description = "Consume a CSV containing a list of transactions and produces a set of bank account statements."
keywords = ["csv", "accounting"]
repository = "https://github.com/OliverBrotchie/csv-ledger"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
nom = "7.1.1"

