[package]
name = "csv_ledger"
authors = ["Oliver Brotchie <o.brotchie@gmail.com>"]
description = "Consume a CSV containing a list of transactions and produce a set of bank account statements."
keywords = ["csv", "accounting"]
repository = "https://github.com/OliverBrotchie/csv-ledger"
license = "MIT"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
csv_ledger_lib = { path = "lib", version = "0.1.1" }

[dev-dependencies]
tempfile = "3.3.0"

[features]
default = []
test_args = []
